--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
 	<title>Telerik UI for ASP.NET MVC Quick Start</title>
 
 	<meta charset="utf-8">
-	<meta name="description" content="A quick-start guide for NativeScript CLI apps">
-	<meta name="author" content="TJ VanToll, Jen Looper">
+	<meta name="description" content="A quick-start guide for Telerik UI for ASP.NET MVC">
+	<meta name="author" content="Ed Charbeneau">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link href="css/style.css" rel="stylesheet">
@@ -17,7 +17,7 @@
 	<div id="header">
 		<a href="#" class="menu header-btn" id="toggle-toc"></a>
 		<h1>UI for ASP.NET MVC Quick Start</h1>
-		<a href="https://github.com/NativeScript/quick-start" class="github header-btn"></a>
+		<a href="https://github.com/EdCharbeneau/kendo-quickstart-mvc" class="github header-btn"></a>
 	</div>
 
 	<div id="content-container">
